--- a/Project Euler/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler/Project Euler.csproj
@@ -42,12 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem1.cs" />
+    <Compile Include="Problem10.cs" />
     <Compile Include="Problem2.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem5.cs" />
     <Compile Include="Problem6.cs" />
     <Compile Include="Problem7.cs" />
+    <Compile Include="Problem8.cs" />
+    <Compile Include="Problem9.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
