working on passing BigNum's by value with assignment operator.

--- a/Project Euler/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler/Project Euler.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Helpers\BigNum.cs" />
     <Compile Include="Helpers\deque.cs" />
+    <Compile Include="Helpers\LinkedList.cs" />
     <Compile Include="Problem1.cs" />
     <Compile Include="Problem10.cs" />
     <Compile Include="Problem11.cs" />
