--- a/Project Euler/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler/Project Euler.csproj
@@ -51,11 +51,18 @@
     <Compile Include="Problem11.cs" />
     <Compile Include="Problem12.cs" />
     <Compile Include="Problem13.cs" />
+    <Compile Include="Problem14.cs" />
+    <Compile Include="Problem15.cs" />
     <Compile Include="Problem2.cs" />
+    <Compile Include="Problem16.cs" />
+    <Compile Include="Problem20.cs" />
+    <Compile Include="Problem25.cs" />
     <Compile Include="Problem3.cs" />
     <Compile Include="Problem4.cs" />
     <Compile Include="Problem5.cs" />
+    <Compile Include="Problem56.cs" />
     <Compile Include="Problem6.cs" />
+    <Compile Include="Problem63.cs" />
     <Compile Include="Problem7.cs" />
     <Compile Include="Problem8.cs" />
     <Compile Include="Problem9.cs" />
