--- a/Project Euler/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler/Project Euler.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Problem6.cs" />
     <Compile Include="Problem63.cs" />
     <Compile Include="Problem7.cs" />
+    <Compile Include="Problem77.cs" />
     <Compile Include="Problem8.cs" />
     <Compile Include="Problem9.cs" />
     <Compile Include="Program.cs" />
