--- a/Project Euler/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler/Project Euler.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Helpers\deque.cs" />
     <Compile Include="Helpers\LinkedList.cs" />
     <Compile Include="Helpers\Methods.cs" />
+    <Compile Include="Helpers\MultisetTree.cs" />
     <Compile Include="Pi.cs" />
     <Compile Include="Problem1.cs" />
     <Compile Include="Problem10.cs" />
